@@ -2,7 +2,7 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.32 2001/06/27 01:15:16 mdejong Exp $
+# RCS: @(#) $Id: configure.in,v 1.33 2001/07/04 00:19:48 mdejong Exp $
 
 AC_INIT(../generic/tk.h)
 
@@ -213,7 +213,6 @@ AC_SUBST(TK_SHARED_BUILD)
 
 AC_SUBST(PATHTYPE)
 AC_SUBST(CYGPATH)
-AC_SUBST(VPSEP)
 AC_SUBST(CFLAGS_DEFAULT)
 AC_SUBST(CFLAGS_DEBUG)
 AC_SUBST(CFLAGS_OPTIMIZE)
