@@ -1,3 +1,10 @@
+2001-07-03  Mo DeJong  <mdejong@redhat.com>
+
+	* win/Makefile.in: Don't use VPSEP, instead just use :
+	in the VPATH.
+	* win/configure: Regen.
+	* win/configure.in: Don't subst VPSEP.
+
 2001-07-03  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* library/xmfbox.tcl (tkMotifFDialog_ActivateSEnt): Added missing
